--- a/notebook/spam_detection.ipynb
+++ b/notebook/spam_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 1,
    "id": "47f0c5fc",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 2,
    "id": "216906f4",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 3,
    "id": "6dace7a4",
    "metadata": {},
    "outputs": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 4,
    "id": "cc1f55ce",
    "metadata": {},
    "outputs": [
@@ -169,7 +169,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 280,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 5,
    "id": "08909660",
    "metadata": {},
    "outputs": [
@@ -288,7 +288,7 @@
        "[5572 rows x 2 columns]"
       ]
      },
-     "execution_count": 281,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 6,
    "id": "0c886070",
    "metadata": {},
    "outputs": [
@@ -312,7 +312,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 282,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 283,
+   "execution_count": 7,
    "id": "ea15804a",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "np.int64(403)"
       ]
      },
-     "execution_count": 283,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 8,
    "id": "3abef958",
    "metadata": {},
    "outputs": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 285,
+   "execution_count": 9,
    "id": "60a4d1c5",
    "metadata": {},
    "outputs": [],
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 10,
    "id": "eb82c4bf",
    "metadata": {},
    "outputs": [],
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 11,
    "id": "49ea0474",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 12,
    "id": "69843e48",
    "metadata": {},
    "outputs": [
@@ -508,7 +508,7 @@
        "[5169 rows x 2 columns]"
       ]
      },
-     "execution_count": 288,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 13,
    "id": "89820269",
    "metadata": {},
    "outputs": [
@@ -626,7 +626,7 @@
        "[5169 rows x 2 columns]"
       ]
      },
-     "execution_count": 289,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 14,
    "id": "7ecf5eb0",
    "metadata": {},
    "outputs": [
@@ -749,7 +749,7 @@
        "[5169 rows x 2 columns]"
       ]
      },
-     "execution_count": 290,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 15,
    "id": "484510c1",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 16,
    "id": "f8249ae0",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
        "[5169 rows x 2 columns]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,46 +907,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 17,
    "id": "e63e190e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5169\n",
-      "                                                      0\n",
-      "0     go until jurong point crazy available only in ...\n",
-      "1                               ok lar joking wif u oni\n",
-      "2     free entry in a wkly comp to win fa cup final ...\n",
-      "3           u dun say so early hor u c already then say\n",
-      "4     nah i don t think he goes to usf he lives arou...\n",
-      "...                                                 ...\n",
-      "5164  this is the nd time we have tried contact u u ...\n",
-      "5165                  will b going to esplanade fr home\n",
-      "5166  pity was in mood for that so any other suggest...\n",
-      "5167  the guy did some bitching but i acted like i d...\n",
-      "5168                          rofl its true to its name\n",
-      "\n",
-      "[5169 rows x 1 columns]\n",
-      "      target                                               text\n",
-      "0          0  Go until jurong point, crazy.. Available only ...\n",
-      "1          0                      Ok lar... Joking wif u oni...\n",
-      "2          1  Free entry in 2 a wkly comp to win FA Cup fina...\n",
-      "3          0  U dun say so early hor... U c already then say...\n",
-      "4          0  Nah I don't think he goes to usf, he lives aro...\n",
-      "...      ...                                                ...\n",
-      "5164       1  This is the 2nd time we have tried 2 contact u...\n",
-      "5165       0              Will Ì_ b going to esplanade fr home?\n",
-      "5166       0  Pity, * was in mood for that. So...any other s...\n",
-      "5167       0  The guy did some bitching but I acted like i'd...\n",
-      "5168       0                         Rofl. Its true to its name\n",
-      "\n",
-      "[5169 rows x 2 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "data = list()\n",
     "\n",
@@ -955,17 +919,15 @@
     "    if temp_ not in words:\n",
     "        temp__ = data.append([' '.join(temp_)])\n",
     "\n",
-    "print(len(data))\n",
+    "# print(data)\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "print(df)\n",
-    "print(s_det)\n",
     "s_det['text_1'] = df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 18,
    "id": "f8b10574",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1059,226 @@
        "[5169 rows x 3 columns]"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s_det"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "663f81dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                      0\n",
+      "0     go until jurong point crazi avail onli in bugi...\n",
+      "1                                 ok lar joke wif u oni\n",
+      "2     free entri in a wkli comp to win fa cup final ...\n",
+      "3           u dun say so earli hor u c alreadi then say\n",
+      "4     nah i don t think he goe to usf he live around...\n",
+      "...                                                 ...\n",
+      "5164  thi is the nd time we have tri contact u u hav...\n",
+      "5165                      will b go to esplanad fr home\n",
+      "5166      piti wa in mood for that so ani other suggest\n",
+      "5167  the guy did some bitch but i act like i d be i...\n",
+      "5168                            rofl it true to it name\n",
+      "\n",
+      "[5169 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.stem import PorterStemmer\n",
+    "\n",
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "spam_msg = list()\n",
+    "\n",
+    "\n",
+    "for msg in s_det['text_1']:\n",
+    "    words = msg.split()\n",
+    "    stemmed_word = list()\n",
+    "    for word in words:\n",
+    "        # stemmed_word = \n",
+    "        stemmed_word.append(stemmer.stem(re.sub('[^a-zA-Z]' , '' , word)))\n",
+    "    spam_msg.append([' '.join(stemmed_word)])\n",
+    "\n",
+    "\n",
+    "df1 = pd.DataFrame(spam_msg)\n",
+    "\n",
+    "s_det['text_2'] = df1\n",
+    "\n",
+    "print(df1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "aeaeb0e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>target</th>\n",
+       "      <th>text</th>\n",
+       "      <th>text_1</th>\n",
+       "      <th>text_2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Go until jurong point, crazy.. Available only ...</td>\n",
+       "      <td>go until jurong point crazy available only in ...</td>\n",
+       "      <td>go until jurong point crazi avail onli in bugi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Ok lar... Joking wif u oni...</td>\n",
+       "      <td>ok lar joking wif u oni</td>\n",
+       "      <td>ok lar joke wif u oni</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Free entry in 2 a wkly comp to win FA Cup fina...</td>\n",
+       "      <td>free entry in a wkly comp to win fa cup final ...</td>\n",
+       "      <td>free entri in a wkli comp to win fa cup final ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>U dun say so early hor... U c already then say...</td>\n",
+       "      <td>u dun say so early hor u c already then say</td>\n",
+       "      <td>u dun say so earli hor u c alreadi then say</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Nah I don't think he goes to usf, he lives aro...</td>\n",
+       "      <td>nah i don t think he goes to usf he lives arou...</td>\n",
+       "      <td>nah i don t think he goe to usf he live around...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5164</th>\n",
+       "      <td>1</td>\n",
+       "      <td>This is the 2nd time we have tried 2 contact u...</td>\n",
+       "      <td>this is the nd time we have tried contact u u ...</td>\n",
+       "      <td>thi is the nd time we have tri contact u u hav...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5165</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Will Ì_ b going to esplanade fr home?</td>\n",
+       "      <td>will b going to esplanade fr home</td>\n",
+       "      <td>will b go to esplanad fr home</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5166</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Pity, * was in mood for that. So...any other s...</td>\n",
+       "      <td>pity was in mood for that so any other suggest...</td>\n",
+       "      <td>piti wa in mood for that so ani other suggest</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5167</th>\n",
+       "      <td>0</td>\n",
+       "      <td>The guy did some bitching but I acted like i'd...</td>\n",
+       "      <td>the guy did some bitching but i acted like i d...</td>\n",
+       "      <td>the guy did some bitch but i act like i d be i...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5168</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Rofl. Its true to its name</td>\n",
+       "      <td>rofl its true to its name</td>\n",
+       "      <td>rofl it true to it name</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5169 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      target                                               text  \\\n",
+       "0          0  Go until jurong point, crazy.. Available only ...   \n",
+       "1          0                      Ok lar... Joking wif u oni...   \n",
+       "2          1  Free entry in 2 a wkly comp to win FA Cup fina...   \n",
+       "3          0  U dun say so early hor... U c already then say...   \n",
+       "4          0  Nah I don't think he goes to usf, he lives aro...   \n",
+       "...      ...                                                ...   \n",
+       "5164       1  This is the 2nd time we have tried 2 contact u...   \n",
+       "5165       0              Will Ì_ b going to esplanade fr home?   \n",
+       "5166       0  Pity, * was in mood for that. So...any other s...   \n",
+       "5167       0  The guy did some bitching but I acted like i'd...   \n",
+       "5168       0                         Rofl. Its true to its name   \n",
+       "\n",
+       "                                                 text_1  \\\n",
+       "0     go until jurong point crazy available only in ...   \n",
+       "1                               ok lar joking wif u oni   \n",
+       "2     free entry in a wkly comp to win fa cup final ...   \n",
+       "3           u dun say so early hor u c already then say   \n",
+       "4     nah i don t think he goes to usf he lives arou...   \n",
+       "...                                                 ...   \n",
+       "5164  this is the nd time we have tried contact u u ...   \n",
+       "5165                  will b going to esplanade fr home   \n",
+       "5166  pity was in mood for that so any other suggest...   \n",
+       "5167  the guy did some bitching but i acted like i d...   \n",
+       "5168                          rofl its true to its name   \n",
+       "\n",
+       "                                                 text_2  \n",
+       "0     go until jurong point crazi avail onli in bugi...  \n",
+       "1                                 ok lar joke wif u oni  \n",
+       "2     free entri in a wkli comp to win fa cup final ...  \n",
+       "3           u dun say so earli hor u c alreadi then say  \n",
+       "4     nah i don t think he goe to usf he live around...  \n",
+       "...                                                 ...  \n",
+       "5164  thi is the nd time we have tri contact u u hav...  \n",
+       "5165                      will b go to esplanad fr home  \n",
+       "5166      piti wa in mood for that so ani other suggest  \n",
+       "5167  the guy did some bitch but i act like i d be i...  \n",
+       "5168                            rofl it true to it name  \n",
+       "\n",
+       "[5169 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1109,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "663f81dd",
+   "id": "9a0b2358-6175-44cf-a66d-52235b7a1cc4",
    "metadata": {},
    "outputs": [],
    "source": []
