--- a/notebook/spam_detection.ipynb
+++ b/notebook/spam_detection.ipynb
@@ -684,13 +684,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Error loading stopswords: Package 'stopswords' not found\n",
-      "[nltk_data]     in index\n"
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\pralad\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
    ],
    "source": [
-    "nltk.download('stopswords')\n",
+    "nltk.download('stopwords')\n",
     "words = stopwords.words('english')\n",
     "print(words)"
    ]
@@ -1451,8 +1452,8 @@
       "accuracy score 0.9709864603481625\n",
       "precision score 1.0\n",
       "for DTC\n",
-      "accuracy score 0.937137330754352\n",
-      "precision score 0.8613861386138614\n",
+      "accuracy score 0.9381044487427466\n",
+      "precision score 0.8627450980392157\n",
       "for LRC\n",
       "accuracy score 0.9632495164410058\n",
       "precision score 0.9464285714285714\n",
@@ -1480,8 +1481,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a870e62c-186a-407b-9c37-30fcaa9c3f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nltk.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "26c94820-bbf3-49c7-a65a-1ef9aefdbda4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(re.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcc3cab2-dbae-4f08-8340-cc7e412d5774",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1489,7 +1526,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "regress",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
