--- a/notebook/spam_detection.ipynb
+++ b/notebook/spam_detection.ipynb
@@ -437,6 +437,16 @@
      "text": [
       "Label mapping: {'ham': np.int64(0), 'spam': np.int64(1)}\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['..\\\\model\\\\label_encoder.joblib']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -446,7 +456,9 @@
     "\n",
     "s_det['target'] = encoder.fit_transform(s_det['target'])\n",
     "\n",
-    "print(\"Label mapping:\", dict(zip(encoder.classes_, encoder.transform(encoder.classes_))))"
+    "print(\"Label mapping:\", dict(zip(encoder.classes_, encoder.transform(encoder.classes_))))\n",
+    "\n",
+    "joblib.dump(encoder, '..\\\\model\\\\label_encoder.joblib')"
    ]
   },
   {
@@ -725,6 +737,9 @@
     "data = list()\n",
     "\n",
     "for datas in s_det['text']:\n",
+    "    if not datas or not isinstance(datas, str):  # Check for empty or non-string\n",
+    "        data.append('')\n",
+    "        continue\n",
     "    temp_ = re.sub('[^a-zA-Z]',' ',datas).lower().split()\n",
     "    temp_ = [word for word in temp_ if word not in words]  # Remove stop words per word\n",
     "    data.append(' '.join(temp_))\n",
@@ -884,28 +899,7 @@
    "execution_count": 19,
    "id": "663f81dd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                                 text_2\n",
-      "0     go jurong point crazi avail bugi n great world...\n",
-      "1                                 ok lar joke wif u oni\n",
-      "2     free entri wkli comp win fa cup final tkt st m...\n",
-      "3                   u dun say earli hor u c alreadi say\n",
-      "4                  nah think goe usf live around though\n",
-      "...                                                 ...\n",
-      "5164  nd time tri contact u u pound prize claim easi...\n",
-      "5165                              b go esplanad fr home\n",
-      "5166                                  piti mood suggest\n",
-      "5167  guy bitch act like interest buy someth els nex...\n",
-      "5168                                     rofl true name\n",
-      "\n",
-      "[5169 rows x 1 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from nltk.stem import PorterStemmer\n",
     "\n",
@@ -919,9 +913,7 @@
     "    \n",
     "df1 = pd.DataFrame(spam_msg, columns=['text_2'])\n",
     "s_det['text_2'] = df1['text_2']\n",
-    "s_det_1['text_2'] = df1['text_2']\n",
-    "\n",
-    "print(df1)"
+    "s_det_1['text_2'] = df1['text_2']\n"
    ]
   },
   {
@@ -1330,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d0653b64-d9c8-4b75-9f29-8653a9f59918",
    "metadata": {},
    "outputs": [
@@ -1349,19 +1341,13 @@
       "precision score 1.0\n",
       "for DTC\n",
       "accuracy score 0.9342359767891683\n",
-      "precision score 0.8240740740740741\n",
+      "precision score 0.8181818181818182\n",
       "for LRC\n",
       "accuracy score 0.9564796905222437\n",
       "precision score 0.9514563106796117\n",
       "for RFC\n",
       "accuracy score 0.9748549323017408\n",
-      "precision score 0.9827586206896551\n",
-      "for ABC\n",
-      "accuracy score 0.925531914893617\n",
-      "precision score 0.8426966292134831\n",
-      "for XGB\n",
-      "accuracy score 0.9709864603481625\n",
-      "precision score 0.9576271186440678\n"
+      "precision score 0.9827586206896551\n"
      ]
     }
    ],
@@ -1372,41 +1358,25 @@
     "    print('accuracy score' , current_accuracy)\n",
     "    print('precision score' , current_precision)\n",
     "    \n",
-    "    joblib.dump(svc , f\"..\\\\model\\\\{name}.joblib\")"
+    "    joblib.dump(model , f\"..\\\\model\\\\{name}.joblib\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a870e62c-186a-407b-9c37-30fcaa9c3f28",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.9.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(nltk.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "26c94820-bbf3-49c7-a65a-1ef9aefdbda4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.2.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(re.__version__)"
    ]
