--- a/notebook/spam_detection.ipynb
+++ b/notebook/spam_detection.ipynb
@@ -1322,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "d0653b64-d9c8-4b75-9f29-8653a9f59918",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,13 @@
       "precision score 0.9514563106796117\n",
       "for RFC\n",
       "accuracy score 0.9748549323017408\n",
-      "precision score 0.9827586206896551\n"
+      "precision score 0.9827586206896551\n",
+      "for ABC\n",
+      "accuracy score 0.925531914893617\n",
+      "precision score 0.8426966292134831\n",
+      "for XGB\n",
+      "accuracy score 0.9709864603481625\n",
+      "precision score 0.9576271186440678\n"
      ]
     }
    ],
@@ -1363,20 +1369,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "a870e62c-186a-407b-9c37-30fcaa9c3f28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.9.1\n"
+     ]
+    }
+   ],
    "source": [
     "print(nltk.__version__)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "26c94820-bbf3-49c7-a65a-1ef9aefdbda4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2.1\n"
+     ]
+    }
+   ],
    "source": [
     "print(re.__version__)"
    ]
